tests/samples/negative/types/const_initializer_function_call.ax
module const_initializer_function_call;

fn value() -> i32 {
  return 7;
}

const VALUE: i32 = value();

fn main() -> i32 {
  return VALUE;
}
